--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -48,10 +48,10 @@
         
 
 <div class="page-header">
-  <font color="purple"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
+  <font color="blue"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
 </div>
         <div class="page-header">
-  <font color="purple"> <h2>Personality Quiz Project </font></h2>
+  <font color="blue"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
