--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -37,7 +37,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://natalieberrum.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://natalieberrum.github.io/">Natalie's Site</a>
         </div>
       </div>
     </div>
