--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. </p>
+    <p> Welcome to my webpage! My name is Natalie Berrum and I'm a student at DSST College View Highschool where I am currently in a Computer Science class. </p>
 <div class="page-header">
   <font color="pink"> <h2>My Projects  </font></h2>
 </div>
