--- a/arduinocatapult.html
+++ b/arduinocatapult.html
@@ -51,7 +51,7 @@
   <font color="blue"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
 </div>
         <div class="page-header">
-  <font color="blue"> <h2>Personality Quiz Project </font></h2>
+  <font color="light blue"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
