--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
   <font color="pink"> <h2>Natalie Berrum's Site</font></h2>
 </div>
 
-<div class="row-fluid">
+ <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage! My name is Natalie Berrum and I'm a student at DSST College View Highschool where I am currently in a Computer Science class. </p>
+    <p> Welcome to my webpage! My name is Natalie Berrum and I'm a junior at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> I'm taking a computer science class at school, and while I do enjoy the class, it is not my passion. I aspire to study to become a pediatrician when I grow up. I love working with younger kids and the medicine side of science really interests me. When i'm not at school or doing school work, I participate in activities at my church. For example, I'm a part of my chuch choir and I attend the youth group they hold every Friday. Moreover, on my free time I also enjoy reading and drawing!</p>
 <div class="page-header">
   <font color="pink"> <h2>My Projects  </font></h2>
 </div>
