--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 </div>
 <div class="page-header">
   <font color="pink"> <h2>My Resume  </font></h2>
+  <p> This is my <a href="Resume - Google Docs.pdf">resume</a></p>
 </div>
 
 
