--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Tinkercad House Project</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Natalie Berrum">
 
@@ -47,17 +47,14 @@
       <div class="content">
         
 
-<div class="page-header">
-  <font color="pink"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
-</div>
         <div class="page-header">
-  <font color="pink"> <h2>My Projects  </font></h2>
+  <font color="pink"> <h2>My Tinkercad House Project </font></h2>
 </div>
 
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Processing Project</p>
+    <p>This is a page about my tinkercad house project. I created this project on the website Tinkercad, where I had to learn new skills that came with the site. t</p>
 
 
 
