--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Tinkercad Vehicle Project</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Natalie Berrum">
 
@@ -47,17 +47,14 @@
       <div class="content">
         
 
-<div class="page-header">
-  <font color="green"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
-</div>
         <div class="page-header">
-  <font color="green"> <h2>Personality Quiz Project </font></h2>
+  <font color="Torquoise"> <h2>My Tinkercad Veicle Project</font></h2>
 </div>
 
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Tinkercad Vehicle Project</p>
+    <p>This is a page about my Tinkercad Vehicle Project, which I also had to create on the website Tinkercad. Since it is a 3D printing website, I needed to make sure that my vehicle was printable.</p>
 
 
 
