--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -54,7 +54,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my tinkercad house project. I created this project on the website Tinkercad, where I had to learn new skills that came with the site. t</p>
+    <p>This is a page about my tinkercad house project. I created this project on the website Tinkercad, where I had to learn new skills that came with the site. </p>
 
 
 
