--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -48,7 +48,7 @@
         
 
         <div class="page-header">
-  <font color="mauve"> <h2>My Tinkercad House Project </font></h2>
+  <font color="orchid"> <h2>My Tinkercad House Project </font></h2>
 </div>
 
 
