--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -51,7 +51,7 @@
   <font color="purple"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
 </div>
         <div class="page-header">
-  <font color="purple"> <h2>Personality Quiz Project </font></h2>
+  <font color="rose"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
