--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Personality Quiz Project</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Natalie Berrum">
 
