--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -48,7 +48,7 @@
         
 
 <div class="page-header">
-  <font color="purple"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
+  <font color="sage"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
 </div>
         <div class="page-header">
   <font color="mint"> <h2>Personality Quiz Project </font></h2>
