--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -48,7 +48,7 @@
         
 
         <div class="page-header">
-  <font color="mint"> <h2>Personality Quiz Project </font></h2>
+  <font color="lime"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
