--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <p> I'm taking a computer science class at school, and while I do enjoy the class, it is not my passion. I aspire to study to become a pediatrician when I grow up. I love working with younger kids and the medicine side of science really interests me. When i'm not at school or doing school work, I participate in activities at my church. For example, I'm a part of my chuch choir and I attend the youth group they hold every Friday. Moreover, on my free time I also enjoy reading and drawing!</p>
 <div class="page-header">
   <font color="pink"> <h2>My Projects  </font></h2>
+ <img src="sloth.jpg">
+      
 </div>
 
 <p>Here are a few of my Computer Science projects.</p>
