--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -60,7 +60,19 @@
 
       </div>
   <div>
-    <img src= " ">
+    <img src= "Quiz 1.PNG">
+     <img src= "Quiz 2.PNG">
+     <img src= "Quiz 3.PNG">
+     <img src= "Quiz 4.PNG">
+     <img src= "Quiz 5.PNG">
+     <img src= "Quiz 6.PNG">
+     <img src= "Quiz 7.PNG">
+     <img src= "Quiz 8.PNG">
+     <img src= "Quiz 9.PNG">
+     <img src= "Quiz 10.PNG">
+     <img src= "Quiz 11.PNG">
+     <img src= "Quiz 12.PNG">
+    
   </div>
       <hr>
       <footer>
@@ -75,4 +87,4 @@
   </body>
 </html>
 
-"
+
