--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -55,7 +55,11 @@
 <div class="row-fluid">
   <div class="span12">
     <p>This is a page about my tinkercad house project. I created this project on the website Tinkercad, where I had to learn new skills that came with the site. </p>
-
+ <div>
+    <img src= "House 1.PNG">
+     <img src= "House 2.PNG">
+       
+  </div>
 
 
       </div>
