--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -56,7 +56,10 @@
   <div class="span12">
     <p>This is a page about my Tinkercad Vehicle Project, which I also had to create on the website Tinkercad. Since it is a 3D printing website, I needed to make sure that my vehicle was printable.</p>
 
-
+ <div>
+    <img src= "Car 1.PNG">
+    
+  </div>
 
       </div>
       <hr>
