--- a/arduinocatapult.html
+++ b/arduinocatapult.html
@@ -58,7 +58,11 @@
 <div class="row-fluid">
   <div class="span12">
     <p>This is a page about my Arduino Catapult Project</p>
-
+ <div>
+    <img src= "Arduino 1.PNG">
+     <img src= "Arduino 2.PNG">
+    
+  </div>
 
 
       </div>
