--- a/arduinocatapult.html
+++ b/arduinocatapult.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>site name</title>
+    <title>Arduino Catapult Project</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Natalie Berrum">
 
@@ -47,17 +47,15 @@
       <div class="content">
         
 
-<div class="page-header">
-  <font color="baby blue"> <h2>simple site  </font><small>Your class site subtitle</small></h2>
-</div>
+
         <div class="page-header">
-  <font color="light blue"> <h2>Personality Quiz Project </font></h2>
+  <font color="#48CFAD"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Arduino Catapult Project</p>
+    <p>This is a page about my Arduino Catapult Project. In this project we were paired up with another person and the goal was to get a ping pong ball over a net with some type of prototype. For mine and my partners project, we creates a small catapult and used servo motors from the arduino it in order to launch it. Unfortunatlly, our catapult was unable to reset automatically no matter how many ideas we tried.</p>
  <div>
     <img src= "Arduino 1.PNG">
      <img src= "Arduino 2.PNG">
