--- a/arduinocatapult.html
+++ b/arduinocatapult.html
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+     <body style="background-color:#CED2CC;">
     <meta charset="utf-8">
     <title>Arduino Catapult Project</title>
     <meta name="description" content="Your Webpage Description">
