--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <body style="background-color:#CED2CC;">
     <meta charset="utf-8">
     <title>Natalie Berrum's Site</title>
     <meta name="description" content="Your Webpage Description">
