--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <body style="background-color:#CED2CC;">
     <meta charset="utf-8">
     <title>Personality Quiz Project</title>
     <meta name="description" content="Your Webpage Description">
@@ -48,13 +49,13 @@
         
 
         <div class="page-header">
-  <font color="sky"> <h2>Personality Quiz Project </font></h2>
+  <font color="#DABFDE"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
 <div class="row-fluid">
   <div class="span12">
-    <p>This is a page about my Personality Quiz Project</p>
+    <p>This is a page about my Personality Quiz Project. We used the Processing coding software in order to get an intro into coding. For this project our task was to create some type of quiz. For mine and my partner's quiz we decided to do a personality quiz that told the user what flavor milkshape their personality lined up with. The quiz could use some more pictures and maybe we can make it look nicer, but overall the quiz works. </p>
 
 
 
