--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <body style="background-color:#CED2CC;">
+    <body style="background-color:#C6C6C6;">
     <meta charset="utf-8">
     <title>Personality Quiz Project</title>
     <meta name="description" content="Your Webpage Description">
