--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <body style="background-color:#CED2CC;">
+    <body style="background-color:#C6C6C6;">
     <meta charset="utf-8">
     <title>Natalie Berrum's Site</title>
     <meta name="description" content="Your Webpage Description">
