--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+         <body style="background-color:#C5C5C5;">
     <meta charset="utf-8">
     <title>Tinkercad Vehicle Project</title>
     <meta name="description" content="Your Webpage Description">
