--- a/tinkercadvehicle.html
+++ b/tinkercadvehicle.html
@@ -49,7 +49,7 @@
         
 
         <div class="page-header">
-  <font color="Turquoise"> <h2>My Tinkercad Veicle Project</font></h2>
+  <font color="#FFDFD3"> <h2>My Tinkercad Veicle Project</font></h2>
 </div>
 
 
