--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
 
 <div class="page-header">
-  <font color="pink"> <h2>Natalie Berrum's Site</font></h2>
+  <font color="#FEC8D8"> <h2>Natalie Berrum's Site</font></h2>
 </div>
 
  <div class="row-fluid">
