--- a/personalityquiz.html
+++ b/personalityquiz.html
@@ -49,7 +49,7 @@
         
 
         <div class="page-header">
-  <font color="#DABFDE"> <h2>Personality Quiz Project </font></h2>
+  <font color="#DEFDE0"> <h2>Personality Quiz Project </font></h2>
 </div>
 
 
