--- a/tinkercadhouse.html
+++ b/tinkercadhouse.html
@@ -49,7 +49,7 @@
         
 
         <div class="page-header">
-  <font color="orchid"> <h2>My Tinkercad House Project </font></h2>
+  <font color="#DEF3FD"> <h2>My Tinkercad House Project </font></h2>
 </div>
 
 
