--- a/arduinocatapult.html
+++ b/arduinocatapult.html
@@ -50,7 +50,7 @@
 
 
         <div class="page-header">
-  <font color="#48CFAD"> <h2>Personality Quiz Project </font></h2>
+  <font color="#F0DEFD"> <h2>Arduino Catapult Project </font></h2>
 </div>
 
 
