--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
 
  <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage! My name is Natalie Berrum and I'm a junior at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+     <font color="#ffffff"> <h2>
+       <p> Welcome to my webpage! My name is Natalie Berrum and I'm a junior at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> I'm taking a computer science class at school, and while I do enjoy the class, it is not my passion. I aspire to study to become a pediatrician when I grow up. I love working with younger kids and the medicine side of science really interests me. When i'm not at school or doing school work, I participate in activities at my church. For example, I'm a part of my chuch choir and I attend the youth group they hold every Friday. Moreover, on my free time I also enjoy reading and drawing!</p>
 <div class="page-header">
-  <font color="pink"> <h2>My Projects  </font></h2>
+  <font color="#FEC8D8"> <h2>My Projects  </font></h2>
  <img src="sloth.jpg">
       
 </div>
@@ -71,7 +72,7 @@
   </div>
 </div>
 <div class="page-header">
-  <font color="pink"> <h2>My Resume  </font></h2>
+  <font color="#FEC8D8"> <h2>My Resume  </font></h2>
   <p> This is my <a href="Resume - Google Docs.pdf">resume</a></p>
 </div>
 
